Update ProgressDrawable and SlidingTabLayout